--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "caked"
-version = "0.0.1"
+version = "0.0.2"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/gabbyzhat/caked"
 documentation = "https://docs.rs/caked"
@@ -16,5 +16,6 @@ authors = [
 [features]
 
 [dependencies]
+observitor = "~1"
 
 [dev-dependencies]
